--- a/notes/package.json
+++ b/notes/package.json
@@ -22,7 +22,8 @@
     "react-redux": "^8.0.5",
     "redux": "^4.2.0",
     "remark-gfm": "^3.0.1",
-    "text-readability": "^1.0.5"
+    "text-readability": "^1.0.5",
+    "use-context-selector": "^1.4.1"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^3.0.1",
