--- a/notes/package.json
+++ b/notes/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.4",
     "react-redux": "^8.0.5",
+    "react-virtuoso": "^4.0.3",
     "redux": "^4.2.0",
     "remark-gfm": "^3.0.1",
     "text-readability": "^1.0.5"
