--- a/commerce/site/package.json
+++ b/commerce/site/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.1",
+    "react-lazy-hydration": "^0.1.0",
     "react-markdown": "^8.0.5",
     "react-merge-refs": "^2.0.1",
     "react-use-measure": "^2.1.1",
