Yarn v1 & no Turbo

--- a/package.json
+++ b/package.json
@@ -7,21 +7,12 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo run build --filter=next-commerce...",
-    "start": "turbo run dev",
-    "serve": "turbo run start",
-    "types": "turbo run types",
-    "prettier-fix": "prettier --write ."
+    "build": "yarn workspaces run build",
+    "start": "concurrently --names commerce,commerce-local,site 'cd packages/commerce && yarn dev' 'cd packages/commerce-local && yarn dev' 'cd site && yarn dev'",
+    "serve": "cd site && yarn start"
   },
   "devDependencies": {
-    "husky": "^8.0.1",
-    "prettier": "^2.7.1",
-    "turbo": "^1.4.6"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "turbo run lint"
-    }
-  },
-  "packageManager": "yarn@3.3.1"
+    "concurrently": "^7.6.0",
+    "prettier": "^2.7.1"
+  }
 }
