--- a/site/package.json
+++ b/site/package.json
@@ -16,8 +16,8 @@
     "@heroicons/react": "^2.0.13",
     "@radix-ui/react-dropdown-menu": "^1.0.0",
     "@react-spring/web": "^9.4.1",
-    "@vercel/commerce": "workspace:*",
-    "@vercel/commerce-local": "workspace:*",
+    "@vercel/commerce": "*",
+    "@vercel/commerce-local": "*",
     "autoprefixer": "^10.4.2",
     "body-scroll-lock": "^4.0.0-beta.0",
     "clsx": "^1.1.1",
