--- a/packages/taskr-swc/package.json
+++ b/packages/taskr-swc/package.json
@@ -10,7 +10,7 @@
     "taskfile-swc.js"
   ],
   "devDependencies": {
-    "@swc/core": "^1.2.138",
+    "@swc/wasm": "^1.3.27",
     "prettier": "^2.5.1"
   }
 }
