--- a/widgets-editor/package.json
+++ b/widgets-editor/package.json
@@ -72,7 +72,7 @@
     "lint-staged": "^9.5.0",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
-    "lodash-es": "4.17.21",
+    "lodash-es": "^4.17.21",
     "lodash-move": "^1.1.1",
     "loglevel": "^1.8.1",
     "lottie-web": "^5.10.1",
